--- a/dependency-info.html
+++ b/dependency-info.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Date-Revision-yyyymmdd" content="20170505" />
     <meta http-equiv="Content-Language" content="en" />
-    <title>CIA Project &#x2013; About</title>
+    <title>CIA Project &#x2013; Dependency Information</title>
     <link rel="stylesheet" href="./css/apache-maven-fluido-1.6.min.css" />
     <link rel="stylesheet" href="./css/site.css" />
     <link rel="stylesheet" href="./css/print.css" media="print" />
@@ -120,11 +120,11 @@
       <ul class="nav nav-list">
     <li><a href="integration.html" title="CI Management"><span class="none"></span>CI Management</a>  </li>
     <li><a href="dependency-convergence.html" title="Dependency Convergence"><span class="none"></span>Dependency Convergence</a>  </li>
-    <li><a href="dependency-info.html" title="Dependency Information"><span class="none"></span>Dependency Information</a>  </li>
+    <li class="active"><a href="#"><span class="none"></span>Dependency Information</a>
+  </li>
     <li><a href="dependency-management.html" title="Dependency Management"><span class="none"></span>Dependency Management</a>  </li>
     <li><a href="distribution-management.html" title="Distribution Management"><span class="none"></span>Distribution Management</a>  </li>
-    <li class="active"><a href="#"><span class="none"></span>About</a>
-  </li>
+    <li><a href="index.html" title="About"><span class="none"></span>About</a>  </li>
     <li><a href="issue-tracking.html" title="Issue Management"><span class="none"></span>Issue Management</a>  </li>
     <li><a href="license.html" title="Licenses"><span class="none"></span>Licenses</a>  </li>
     <li><a href="modules.html" title="Project Modules"><span class="none"></span>Project Modules</a>  </li>
@@ -161,33 +161,37 @@
         </div>
         <div id="bodyColumn"  class="span10" >
 <div class="section">
-<h2><a name="About_CIA_Project"></a>About CIA Project</h2><a name="About_CIA_Project"></a>
-<p>CIA Parent pom</p>
+<h2><a name="Dependency_Information"></a>Dependency Information</h2><a name="Dependency_Information"></a>
 <div class="section">
-<h3><a name="Project_Modules"></a>Project Modules</h3><a name="Project_Modules"></a>
-<p>This project has declared the following modules:</p>
-<table border="0" class="table table-striped">
-<tr class="a">
-<th>Name</th>
-<th>Description</th></tr>
-<tr class="b">
-<td><a href="../testfoundation/index.html">testfoundation</a></td>
-<td>Testfoundation</td></tr>
-<tr class="a">
-<td><a href="../parent-model-pom/index.html">parent-model-pom</a></td>
-<td>parent-model-pom</td></tr>
-<tr class="b">
-<td><a href="../parent-service-pom/index.html">parent-service-pom</a></td>
-<td>parent-service-pom</td></tr>
-<tr class="a">
-<td><a href="../parent-web-pom/index.html">parent-web-pom</a></td>
-<td>parent-web-pom</td></tr>
-<tr class="b">
-<td><a href="../cia-dist-deb/index.html">cia-dist-deb</a></td>
-<td>parent-web-pom</td></tr>
-<tr class="a">
-<td><a href="../cia-dist-cloudformation/index.html">cia-dist-cloudformation</a></td>
-<td>parent-web-pom</td></tr></table></div></div>
+<h3><a name="Apache_Maven"></a>Apache Maven</h3><a name="Apache_Maven"></a>
+<div class="source"><pre class="prettyprint">&lt;dependency&gt;
+  &lt;groupId&gt;com.hack23.cia&lt;/groupId&gt;
+  &lt;artifactId&gt;parent-pom&lt;/artifactId&gt;
+  &lt;version&gt;2017.4.24-SNAPSHOT&lt;/version&gt;
+  &lt;type&gt;pom&lt;/type&gt;
+&lt;/dependency&gt;</pre></div></div>
+<div class="section">
+<h3><a name="Apache_Buildr"></a>Apache Buildr</h3><a name="Apache_Buildr"></a>
+<div class="source"><pre class="prettyprint">'com.hack23.cia:parent-pom:pom:2017.4.24-SNAPSHOT'</pre></div></div>
+<div class="section">
+<h3><a name="Apache_Ivy"></a>Apache Ivy</h3><a name="Apache_Ivy"></a>
+<div class="source"><pre class="prettyprint">&lt;dependency org=&quot;com.hack23.cia&quot; name=&quot;parent-pom&quot; rev=&quot;2017.4.24-SNAPSHOT&quot;&gt;
+  &lt;artifact name=&quot;parent-pom&quot; type=&quot;pom&quot; /&gt;
+&lt;/dependency&gt;</pre></div></div>
+<div class="section">
+<h3><a name="Groovy_Grape"></a>Groovy Grape</h3><a name="Groovy_Grape"></a>
+<div class="source"><pre class="prettyprint">@Grapes(
+@Grab(group='com.hack23.cia', module='parent-pom', version='2017.4.24-SNAPSHOT')
+)</pre></div></div>
+<div class="section">
+<h3><a name="GradleGrails"></a>Gradle/Grails</h3><a name="GradleGrails"></a>
+<div class="source"><pre class="prettyprint">compile 'com.hack23.cia:parent-pom:2017.4.24-SNAPSHOT'</pre></div></div>
+<div class="section">
+<h3><a name="Scala_SBT"></a>Scala SBT</h3><a name="Scala_SBT"></a>
+<div class="source"><pre class="prettyprint">libraryDependencies += &quot;com.hack23.cia&quot; % &quot;parent-pom&quot; % &quot;2017.4.24-SNAPSHOT&quot;</pre></div></div>
+<div class="section">
+<h3><a name="Leiningen"></a>Leiningen</h3><a name="Leiningen"></a>
+<div class="source"><pre class="prettyprint">[com.hack23.cia/parent-pom &quot;2017.4.24-SNAPSHOT&quot;]</pre></div></div></div>
         </div>
       </div>
     </div>
