--- a/dev-activity.html
+++ b/dev-activity.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Date-Revision-yyyymmdd" content="20170505" />
     <meta http-equiv="Content-Language" content="en" />
-    <title>CIA Project &#x2013; About</title>
+    <title>CIA Project &#x2013; Developer Activity Report</title>
     <link rel="stylesheet" href="./css/apache-maven-fluido-1.6.min.css" />
     <link rel="stylesheet" href="./css/site.css" />
     <link rel="stylesheet" href="./css/print.css" media="print" />
@@ -116,26 +116,20 @@
           <div class="well sidebar-nav">
 <ul class="nav nav-list">
           <li class="nav-header">Project Documentation</li>
-    <li><a href="project-info.html" title="Project Information"><span class="icon-chevron-down"></span>Project Information</a>
+    <li><a href="project-info.html" title="Project Information"><span class="icon-chevron-right"></span>Project Information</a>  </li>
+    <li><a href="project-reports.html" title="Project Reports"><span class="icon-chevron-down"></span>Project Reports</a>
       <ul class="nav nav-list">
-    <li><a href="integration.html" title="CI Management"><span class="none"></span>CI Management</a>  </li>
-    <li><a href="dependency-convergence.html" title="Dependency Convergence"><span class="none"></span>Dependency Convergence</a>  </li>
-    <li><a href="dependency-info.html" title="Dependency Information"><span class="none"></span>Dependency Information</a>  </li>
-    <li><a href="dependency-management.html" title="Dependency Management"><span class="none"></span>Dependency Management</a>  </li>
-    <li><a href="distribution-management.html" title="Distribution Management"><span class="none"></span>Distribution Management</a>  </li>
-    <li class="active"><a href="#"><span class="none"></span>About</a>
+    <li><a href="jacoco-aggregate/index.html" title="JaCoCo Aggregate"><span class="none"></span>JaCoCo Aggregate</a>  </li>
+    <li><a href="surefire-report.html" title="Surefire Report"><span class="none"></span>Surefire Report</a>  </li>
+    <li><a href="dependency-updates-report.html" title="Dependency Updates Report"><span class="none"></span>Dependency Updates Report</a>  </li>
+    <li><a href="plugin-updates-report.html" title="Plugin Updates Report"><span class="none"></span>Plugin Updates Report</a>  </li>
+    <li><a href="property-updates-report.html" title="Property Updates Report"><span class="none"></span>Property Updates Report</a>  </li>
+    <li><a href="changelog.html" title="Change Log"><span class="none"></span>Change Log</a>  </li>
+    <li><a href="file-activity.html" title="File Activity"><span class="none"></span>File Activity</a>  </li>
+    <li class="active"><a href="#"><span class="none"></span>Developer Activity</a>
   </li>
-    <li><a href="issue-tracking.html" title="Issue Management"><span class="none"></span>Issue Management</a>  </li>
-    <li><a href="license.html" title="Licenses"><span class="none"></span>Licenses</a>  </li>
-    <li><a href="modules.html" title="Project Modules"><span class="none"></span>Project Modules</a>  </li>
-    <li><a href="plugin-management.html" title="Plugin Management"><span class="none"></span>Plugin Management</a>  </li>
-    <li><a href="plugins.html" title="Plugins"><span class="none"></span>Plugins</a>  </li>
-    <li><a href="team-list.html" title="Team"><span class="none"></span>Team</a>  </li>
-    <li><a href="source-repository.html" title="Source Code Management"><span class="none"></span>Source Code Management</a>  </li>
-    <li><a href="project-summary.html" title="Summary"><span class="none"></span>Summary</a>  </li>
       </ul>
   </li>
-    <li><a href="project-reports.html" title="Project Reports"><span class="icon-chevron-right"></span>Project Reports</a>  </li>
             <li class="nav-header">Modules</li>
     <li><a href="../testfoundation/index.html" title="testfoundation"><span class="none"></span>testfoundation</a>  </li>
     <li><a href="../parent-model-pom/index.html" title="parent-model-pom"><span class="none"></span>parent-model-pom</a>  </li>
@@ -161,33 +155,23 @@
         </div>
         <div id="bodyColumn"  class="span10" >
 <div class="section">
-<h2><a name="About_CIA_Project"></a>About CIA Project</h2><a name="About_CIA_Project"></a>
-<p>CIA Parent pom</p>
+<h2><a name="Developer_Activity_Report"></a>Developer Activity Report</h2>
 <div class="section">
-<h3><a name="Project_Modules"></a>Project Modules</h3><a name="Project_Modules"></a>
-<p>This project has declared the following modules:</p>
+<h3><a name="Changes_between_2017-04-05_and_2017-05-06"></a>Changes between 2017-04-05 and 2017-05-06</h3>
+<p>Total commits: 36<br />Total number of files changed: 3</p>
 <table border="0" class="table table-striped">
 <tr class="a">
-<th>Name</th>
-<th>Description</th></tr>
+<th>Developer</th>
+<th>Total commits</th>
+<th>Total Number of Files Changed</th></tr>
 <tr class="b">
-<td><a href="../testfoundation/index.html">testfoundation</a></td>
-<td>Testfoundation</td></tr>
+<td>pether.sorling@gmail.com &lt;pether.sorling@gmail.com&gt;</td>
+<td>32</td>
+<td>3</td></tr>
 <tr class="a">
-<td><a href="../parent-model-pom/index.html">parent-model-pom</a></td>
-<td>parent-model-pom</td></tr>
-<tr class="b">
-<td><a href="../parent-service-pom/index.html">parent-service-pom</a></td>
-<td>parent-service-pom</td></tr>
-<tr class="a">
-<td><a href="../parent-web-pom/index.html">parent-web-pom</a></td>
-<td>parent-web-pom</td></tr>
-<tr class="b">
-<td><a href="../cia-dist-deb/index.html">cia-dist-deb</a></td>
-<td>parent-web-pom</td></tr>
-<tr class="a">
-<td><a href="../cia-dist-cloudformation/index.html">cia-dist-cloudformation</a></td>
-<td>parent-web-pom</td></tr></table></div></div>
+<td>Jenkins &lt;pether.sorling@gmail.com&gt;</td>
+<td>4</td>
+<td>1</td></tr></table></div></div>
         </div>
       </div>
     </div>
