--- a/integration.html
+++ b/integration.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Date-Revision-yyyymmdd" content="20170505" />
     <meta http-equiv="Content-Language" content="en" />
-    <title>CIA Project &#x2013; About</title>
+    <title>CIA Project &#x2013; CI Management</title>
     <link rel="stylesheet" href="./css/apache-maven-fluido-1.6.min.css" />
     <link rel="stylesheet" href="./css/site.css" />
     <link rel="stylesheet" href="./css/print.css" media="print" />
@@ -118,13 +118,13 @@
           <li class="nav-header">Project Documentation</li>
     <li><a href="project-info.html" title="Project Information"><span class="icon-chevron-down"></span>Project Information</a>
       <ul class="nav nav-list">
-    <li><a href="integration.html" title="CI Management"><span class="none"></span>CI Management</a>  </li>
+    <li class="active"><a href="#"><span class="none"></span>CI Management</a>
+  </li>
     <li><a href="dependency-convergence.html" title="Dependency Convergence"><span class="none"></span>Dependency Convergence</a>  </li>
     <li><a href="dependency-info.html" title="Dependency Information"><span class="none"></span>Dependency Information</a>  </li>
     <li><a href="dependency-management.html" title="Dependency Management"><span class="none"></span>Dependency Management</a>  </li>
     <li><a href="distribution-management.html" title="Distribution Management"><span class="none"></span>Distribution Management</a>  </li>
-    <li class="active"><a href="#"><span class="none"></span>About</a>
-  </li>
+    <li><a href="index.html" title="About"><span class="none"></span>About</a>  </li>
     <li><a href="issue-tracking.html" title="Issue Management"><span class="none"></span>Issue Management</a>  </li>
     <li><a href="license.html" title="Licenses"><span class="none"></span>Licenses</a>  </li>
     <li><a href="modules.html" title="Project Modules"><span class="none"></span>Project Modules</a>  </li>
@@ -161,33 +161,15 @@
         </div>
         <div id="bodyColumn"  class="span10" >
 <div class="section">
-<h2><a name="About_CIA_Project"></a>About CIA Project</h2><a name="About_CIA_Project"></a>
-<p>CIA Parent pom</p>
+<h2><a name="Overview"></a>Overview</h2><a name="Overview"></a>
+<p>This project uses <a class="externalLink" href="http://hudson-ci.org/">Hudson</a>.</p></div>
 <div class="section">
-<h3><a name="Project_Modules"></a>Project Modules</h3><a name="Project_Modules"></a>
-<p>This project has declared the following modules:</p>
-<table border="0" class="table table-striped">
-<tr class="a">
-<th>Name</th>
-<th>Description</th></tr>
-<tr class="b">
-<td><a href="../testfoundation/index.html">testfoundation</a></td>
-<td>Testfoundation</td></tr>
-<tr class="a">
-<td><a href="../parent-model-pom/index.html">parent-model-pom</a></td>
-<td>parent-model-pom</td></tr>
-<tr class="b">
-<td><a href="../parent-service-pom/index.html">parent-service-pom</a></td>
-<td>parent-service-pom</td></tr>
-<tr class="a">
-<td><a href="../parent-web-pom/index.html">parent-web-pom</a></td>
-<td>parent-web-pom</td></tr>
-<tr class="b">
-<td><a href="../cia-dist-deb/index.html">cia-dist-deb</a></td>
-<td>parent-web-pom</td></tr>
-<tr class="a">
-<td><a href="../cia-dist-cloudformation/index.html">cia-dist-cloudformation</a></td>
-<td>parent-web-pom</td></tr></table></div></div>
+<h2><a name="Access"></a>Access</h2><a name="Access"></a>
+<p>The following is a link to the continuous integration system used by the project:</p>
+<div class="source"><pre class="prettyprint"><a class="externalLink" href="http://www.hack23.com/">http://www.hack23.com/</a></pre></div></div>
+<div class="section">
+<h2><a name="Notifiers"></a>Notifiers</h2><a name="Notifiers"></a>
+<p>No notifiers are defined. Please check back at a later date.</p></div>
         </div>
       </div>
     </div>
