--- a/project-summary.html
+++ b/project-summary.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Date-Revision-yyyymmdd" content="20170505" />
     <meta http-equiv="Content-Language" content="en" />
-    <title>CIA Project &#x2013; About</title>
+    <title>CIA Project &#x2013; Project Summary</title>
     <link rel="stylesheet" href="./css/apache-maven-fluido-1.6.min.css" />
     <link rel="stylesheet" href="./css/site.css" />
     <link rel="stylesheet" href="./css/print.css" media="print" />
@@ -123,8 +123,7 @@
     <li><a href="dependency-info.html" title="Dependency Information"><span class="none"></span>Dependency Information</a>  </li>
     <li><a href="dependency-management.html" title="Dependency Management"><span class="none"></span>Dependency Management</a>  </li>
     <li><a href="distribution-management.html" title="Distribution Management"><span class="none"></span>Distribution Management</a>  </li>
-    <li class="active"><a href="#"><span class="none"></span>About</a>
-  </li>
+    <li><a href="index.html" title="About"><span class="none"></span>About</a>  </li>
     <li><a href="issue-tracking.html" title="Issue Management"><span class="none"></span>Issue Management</a>  </li>
     <li><a href="license.html" title="Licenses"><span class="none"></span>Licenses</a>  </li>
     <li><a href="modules.html" title="Project Modules"><span class="none"></span>Project Modules</a>  </li>
@@ -132,7 +131,8 @@
     <li><a href="plugins.html" title="Plugins"><span class="none"></span>Plugins</a>  </li>
     <li><a href="team-list.html" title="Team"><span class="none"></span>Team</a>  </li>
     <li><a href="source-repository.html" title="Source Code Management"><span class="none"></span>Source Code Management</a>  </li>
-    <li><a href="project-summary.html" title="Summary"><span class="none"></span>Summary</a>  </li>
+    <li class="active"><a href="#"><span class="none"></span>Summary</a>
+  </li>
       </ul>
   </li>
     <li><a href="project-reports.html" title="Project Reports"><span class="icon-chevron-right"></span>Project Reports</a>  </li>
@@ -161,33 +161,52 @@
         </div>
         <div id="bodyColumn"  class="span10" >
 <div class="section">
-<h2><a name="About_CIA_Project"></a>About CIA Project</h2><a name="About_CIA_Project"></a>
-<p>CIA Parent pom</p>
+<h2><a name="Project_Summary"></a>Project Summary</h2><a name="Project_Summary"></a>
 <div class="section">
-<h3><a name="Project_Modules"></a>Project Modules</h3><a name="Project_Modules"></a>
-<p>This project has declared the following modules:</p>
+<h3><a name="Project_Information"></a>Project Information</h3><a name="Project_Information"></a>
 <table border="0" class="table table-striped">
 <tr class="a">
-<th>Name</th>
-<th>Description</th></tr>
+<th>Field</th>
+<th>Value</th></tr>
 <tr class="b">
-<td><a href="../testfoundation/index.html">testfoundation</a></td>
-<td>Testfoundation</td></tr>
+<td>Name</td>
+<td>CIA Project</td></tr>
 <tr class="a">
-<td><a href="../parent-model-pom/index.html">parent-model-pom</a></td>
-<td>parent-model-pom</td></tr>
+<td>Description</td>
+<td>CIA Parent pom</td></tr>
 <tr class="b">
-<td><a href="../parent-service-pom/index.html">parent-service-pom</a></td>
-<td>parent-service-pom</td></tr>
+<td>Homepage</td>
+<td><a class="externalLink" href="https://cia.sourceforge.io/">https://cia.sourceforge.io/</a></td></tr></table></div>
+<div class="section">
+<h3><a name="Project_Organization"></a>Project Organization</h3><a name="Project_Organization"></a>
+<table border="0" class="table table-striped">
 <tr class="a">
-<td><a href="../parent-web-pom/index.html">parent-web-pom</a></td>
-<td>parent-web-pom</td></tr>
+<th>Field</th>
+<th>Value</th></tr>
 <tr class="b">
-<td><a href="../cia-dist-deb/index.html">cia-dist-deb</a></td>
-<td>parent-web-pom</td></tr>
+<td>Name</td>
+<td>www.hack23.com</td></tr>
 <tr class="a">
-<td><a href="../cia-dist-cloudformation/index.html">cia-dist-cloudformation</a></td>
-<td>parent-web-pom</td></tr></table></div></div>
+<td>URL</td>
+<td><a class="externalLink" href="http://www.hack23.com">http://www.hack23.com</a></td></tr></table></div>
+<div class="section">
+<h3><a name="Build_Information"></a>Build Information</h3><a name="Build_Information"></a>
+<table border="0" class="table table-striped">
+<tr class="a">
+<th>Field</th>
+<th>Value</th></tr>
+<tr class="b">
+<td>GroupId</td>
+<td>com.hack23.cia</td></tr>
+<tr class="a">
+<td>ArtifactId</td>
+<td>parent-pom</td></tr>
+<tr class="b">
+<td>Version</td>
+<td>2017.4.24-SNAPSHOT</td></tr>
+<tr class="a">
+<td>Type</td>
+<td>pom</td></tr></table></div></div>
         </div>
       </div>
     </div>
