--- a/team-list.html
+++ b/team-list.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Date-Revision-yyyymmdd" content="20170505" />
     <meta http-equiv="Content-Language" content="en" />
-    <title>CIA Project &#x2013; About</title>
+    <title>CIA Project &#x2013; Project Team</title>
     <link rel="stylesheet" href="./css/apache-maven-fluido-1.6.min.css" />
     <link rel="stylesheet" href="./css/site.css" />
     <link rel="stylesheet" href="./css/print.css" media="print" />
@@ -123,14 +123,14 @@
     <li><a href="dependency-info.html" title="Dependency Information"><span class="none"></span>Dependency Information</a>  </li>
     <li><a href="dependency-management.html" title="Dependency Management"><span class="none"></span>Dependency Management</a>  </li>
     <li><a href="distribution-management.html" title="Distribution Management"><span class="none"></span>Distribution Management</a>  </li>
-    <li class="active"><a href="#"><span class="none"></span>About</a>
-  </li>
+    <li><a href="index.html" title="About"><span class="none"></span>About</a>  </li>
     <li><a href="issue-tracking.html" title="Issue Management"><span class="none"></span>Issue Management</a>  </li>
     <li><a href="license.html" title="Licenses"><span class="none"></span>Licenses</a>  </li>
     <li><a href="modules.html" title="Project Modules"><span class="none"></span>Project Modules</a>  </li>
     <li><a href="plugin-management.html" title="Plugin Management"><span class="none"></span>Plugin Management</a>  </li>
     <li><a href="plugins.html" title="Plugins"><span class="none"></span>Plugins</a>  </li>
-    <li><a href="team-list.html" title="Team"><span class="none"></span>Team</a>  </li>
+    <li class="active"><a href="#"><span class="none"></span>Team</a>
+  </li>
     <li><a href="source-repository.html" title="Source Code Management"><span class="none"></span>Source Code Management</a>  </li>
     <li><a href="project-summary.html" title="Summary"><span class="none"></span>Summary</a>  </li>
       </ul>
@@ -161,33 +161,48 @@
         </div>
         <div id="bodyColumn"  class="span10" >
 <div class="section">
-<h2><a name="About_CIA_Project"></a>About CIA Project</h2><a name="About_CIA_Project"></a>
-<p>CIA Parent pom</p>
+<h2><a name="Project_Team"></a>Project Team</h2><a name="Project_Team"></a>
+<p>A successful project requires many people to play many roles. Some members write code or documentation, while others are valuable as testers, submitting patches and suggestions.</p>
+<p>The project team is comprised of Members and Contributors. Members have direct access to the source of a project and actively evolve the code-base. Contributors improve the project through submission of patches and suggestions to the Members. The number of Contributors to the project is unbounded. Get involved today. All contributions to the project are greatly appreciated.</p>
 <div class="section">
-<h3><a name="Project_Modules"></a>Project Modules</h3><a name="Project_Modules"></a>
-<p>This project has declared the following modules:</p>
+<h3><a name="Members"></a>Members</h3><a name="Members"></a>
+<p>The following is a list of developers with commit privileges that have directly contributed to the project in one way or another.</p>
 <table border="0" class="table table-striped">
 <tr class="a">
+<th>Image</th>
+<th>Id</th>
 <th>Name</th>
-<th>Description</th></tr>
+<th>Email</th>
+<th>Organization</th>
+<th>Roles</th>
+<th>Time Zone</th></tr>
 <tr class="b">
-<td><a href="../testfoundation/index.html">testfoundation</a></td>
-<td>Testfoundation</td></tr>
+<td><img src="http://www.gravatar.com/avatar/7e57fcea6ef55aa6eb936133b2d9e457?d=mm&amp;s=60" alt="" /></td>
+<td><a name="pether"></a>pether</td>
+<td>Pether S&#xf6;rling</td>
+<td>pether(at)users.sourceforge.net</td>
+<td>www.hack23.com</td>
+<td>Founder, System Architect</td>
+<td>0</td></tr></table></div>
+<div class="section">
+<h3><a name="Contributors"></a>Contributors</h3><a name="Contributors"></a>
+<p>The following additional people have contributed to this project through the way of suggestions, patches or documentation.</p>
+<table border="0" class="table table-striped">
 <tr class="a">
-<td><a href="../parent-model-pom/index.html">parent-model-pom</a></td>
-<td>parent-model-pom</td></tr>
+<th>Image</th>
+<th>Name</th>
+<th>Email</th>
+<th>Roles</th></tr>
 <tr class="b">
-<td><a href="../parent-service-pom/index.html">parent-service-pom</a></td>
-<td>parent-service-pom</td></tr>
+<td><img src="http://www.gravatar.com/avatar/661fc7d29611d16a5b3c1095c6b0bf00?d=mm&amp;s=60" alt="" /></td>
+<td>Peter Larsson</td>
+<td>peter.larsson(at)idg.se</td>
+<td>Feedback &amp; bug seeker</td></tr>
 <tr class="a">
-<td><a href="../parent-web-pom/index.html">parent-web-pom</a></td>
-<td>parent-web-pom</td></tr>
-<tr class="b">
-<td><a href="../cia-dist-deb/index.html">cia-dist-deb</a></td>
-<td>parent-web-pom</td></tr>
-<tr class="a">
-<td><a href="../cia-dist-cloudformation/index.html">cia-dist-cloudformation</a></td>
-<td>parent-web-pom</td></tr></table></div></div>
+<td><img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=blank&amp;f=y&amp;s=60" alt="" /></td>
+<td>Klas Peter Sj&#xf6;gren</td>
+<td>-</td>
+<td>Business Advisor</td></tr></table></div></div>
         </div>
       </div>
     </div>
